--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     </form>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
